--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
@@ -1,5 +1,4 @@
-
-/* Class = "UILabel"; text = "設定"; ObjectID = "0TW-1a-IeH"; */
+/* Class = "UILabel"; text = "Configure"; ObjectID = "0TW-1a-IeH"; */
 "0TW-1a-IeH.text" = "設定";
 
 /* Class = "UILabel"; text = "Extension Name"; ObjectID = "0eE-YR-R88"; */
@@ -23,13 +22,13 @@
 /* Class = "UITableViewController"; title = "Profile Selector"; ObjectID = "6bQ-Dj-mFK"; */
 "6bQ-Dj-mFK.title" = "Profile Selector";
 
-/* Class = "UILabel"; text = "有効"; ObjectID = "7vY-8m-y7Y"; */
+/* Class = "UILabel"; text = "Enable"; ObjectID = "7vY-8m-y7Y"; */
 "7vY-8m-y7Y.text" = "有効";
 
 /* Class = "UILabel"; text = "Port 2"; ObjectID = "8QZ-ZA-mzk"; */
 "8QZ-ZA-mzk.text" = "Port 2";
 
-/* Class = "UINavigationItem"; title = "コントローラ"; ObjectID = "99x-ag-YcU"; */
+/* Class = "UINavigationItem"; title = "Controllers"; ObjectID = "99x-ag-YcU"; */
 "99x-ag-YcU.title" = "コントローラ";
 
 /* Class = "UILabel"; text = "Controller Type 1"; ObjectID = "BK8-2K-Qt0"; */
@@ -38,7 +37,7 @@
 /* Class = "UILabel"; text = "Button Opacity"; ObjectID = "Ba8-9K-oXL"; */
 "Ba8-9K-oXL.text" = "Button Opacity";
 
-/* Class = "UILabel"; text = "値"; ObjectID = "BoV-Ny-587"; */
+/* Class = "UILabel"; text = "Value"; ObjectID = "BoV-Ny-587"; */
 "BoV-Ny-587.text" = "値";
 
 /* Class = "UITableViewController"; title = "DS4 Config"; ObjectID = "CBl-HU-ZTx"; */
@@ -47,25 +46,25 @@
 /* Class = "UILabel"; text = "Controller Type 3"; ObjectID = "Dqz-rz-WrZ"; */
 "Dqz-rz-WrZ.text" = "Controller Type 3";
 
-/* Class = "UILabel"; text = "デバイス"; ObjectID = "FT1-rG-Tk3"; */
+/* Class = "UILabel"; text = "Device"; ObjectID = "FT1-rG-Tk3"; */
 "FT1-rG-Tk3.text" = "デバイス";
 
-/* Class = "UILabel"; text = "IPアドレス"; ObjectID = "Gq2-rT-Uq2"; */
+/* Class = "UILabel"; text = "IP Address"; ObjectID = "Gq2-rT-Uq2"; */
 "Gq2-rT-Uq2.text" = "IPアドレス";
 
-/* Class = "UINavigationItem"; title = "デバイス"; ObjectID = "IZx-UR-35B"; */
+/* Class = "UINavigationItem"; title = "Device"; ObjectID = "IZx-UR-35B"; */
 "IZx-UR-35B.title" = "デバイス";
 
-/* Class = "UILabel"; text = "形式"; ObjectID = "J79-DY-CEt"; */
+/* Class = "UILabel"; text = "Type"; ObjectID = "J79-DY-CEt"; */
 "J79-DY-CEt.text" = "形式";
 
 /* Class = "UITableViewController"; title = "Extensions"; ObjectID = "JPL-hJ-93c"; */
 "JPL-hJ-93c.title" = "Extensions";
 
-/* Class = "UINavigationItem"; title = "形式"; ObjectID = "JWn-tN-bch"; */
+/* Class = "UINavigationItem"; title = "Type"; ObjectID = "JWn-tN-bch"; */
 "JWn-tN-bch.title" = "形式";
 
-/* Class = "UINavigationItem"; title = "設定"; ObjectID = "Jcs-zW-f0t"; */
+/* Class = "UINavigationItem"; title = "Configure"; ObjectID = "Jcs-zW-f0t"; */
 "Jcs-zW-f0t.title" = "設定";
 
 /* Class = "UILabel"; text = "Profile Name"; ObjectID = "KqR-0N-gs6"; */
@@ -77,10 +76,10 @@
 /* Class = "UILabel"; text = "Option"; ObjectID = "LaI-lg-59f"; */
 "LaI-lg-59f.text" = "Option";
 
-/* Class = "UILabel"; text = "保存"; ObjectID = "NB0-GD-Qur"; */
+/* Class = "UILabel"; text = "Save"; ObjectID = "NB0-GD-Qur"; */
 "NB0-GD-Qur.text" = "保存";
 
-/* Class = "UILabel"; text = "ポート"; ObjectID = "PCF-H3-GB4"; */
+/* Class = "UILabel"; text = "Port"; ObjectID = "PCF-H3-GB4"; */
 "PCF-H3-GB4.text" = "ポート";
 
 /* Class = "UITableViewController"; title = "Controller Edit"; ObjectID = "R3b-Ox-sS8"; */
@@ -89,7 +88,7 @@
 /* Class = "UILabel"; text = "Port 1"; ObjectID = "SE1-G6-XZg"; */
 "SE1-G6-XZg.text" = "Port 1";
 
-/* Class = "UITableViewSection"; headerTitle = "Wiiリモコン"; ObjectID = "SjZ-tz-Drd"; */
+/* Class = "UITableViewSection"; headerTitle = "Wii Remotes"; ObjectID = "SjZ-tz-Drd"; */
 "SjZ-tz-Drd.headerTitle" = "Wiiリモコン";
 
 /* Class = "UILabel"; text = "Dummy/0/Dummy Device"; ObjectID = "TO2-0X-VA0"; */
@@ -98,7 +97,7 @@
 /* Class = "UILabel"; text = "Controller Type 3"; ObjectID = "Vg0-hK-03r"; */
 "Vg0-hK-03r.text" = "Controller Type 3";
 
-/* Class = "UITableViewSection"; headerTitle = "その他"; ObjectID = "ZqS-Mg-O95"; */
+/* Class = "UITableViewSection"; headerTitle = "Other"; ObjectID = "ZqS-Mg-O95"; */
 "ZqS-Mg-O95.headerTitle" = "その他";
 
 /* Class = "UILabel"; text = "Controller Type 4"; ObjectID = "b08-mZ-m35"; */
@@ -122,16 +121,16 @@
 /* Class = "UILabel"; text = "Wiimote 2"; ObjectID = "ckA-vr-jU6"; */
 "ckA-vr-jU6.text" = "Wiimote 2";
 
-/* Class = "UITableViewSection"; headerTitle = "ゲームキューブ"; ObjectID = "dLT-on-vPp"; */
+/* Class = "UITableViewSection"; headerTitle = "GameCube"; ObjectID = "dLT-on-vPp"; */
 "dLT-on-vPp.headerTitle" = "ゲームキューブ";
 
-/* Class = "UILabel"; text = "ヘルプ"; ObjectID = "dZI-b2-vNp"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "dZI-b2-vNp"; */
 "dZI-b2-vNp.text" = "ヘルプ";
 
 /* Class = "UITableViewController"; title = "Group"; ObjectID = "e9W-dj-exp"; */
 "e9W-dj-exp.title" = "Group";
 
-/* Class = "UILabel"; text = "ヘルプ"; ObjectID = "fcW-EL-79q"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "fcW-EL-79q"; */
 "fcW-EL-79q.text" = "ヘルプ";
 
 /* Class = "UILabel"; text = "Controller Type 2"; ObjectID = "fdC-6f-15Y"; */
@@ -152,13 +151,13 @@
 /* Class = "UILabel"; text = "Port 3"; ObjectID = "jJz-l4-7o7"; */
 "jJz-l4-7o7.text" = "Port 3";
 
-/* Class = "UILabel"; text = "読込"; ObjectID = "joW-Na-mVW"; */
+/* Class = "UILabel"; text = "Load"; ObjectID = "joW-Na-mVW"; */
 "joW-Na-mVW.text" = "読込";
 
-/* Class = "UINavigationItem"; title = "プロファイル"; ObjectID = "jsy-24-OXj"; */
+/* Class = "UINavigationItem"; title = "Profile"; ObjectID = "jsy-24-OXj"; */
 "jsy-24-OXj.title" = "プロファイル";
 
-/* Class = "UILabel"; text = "拡張コントローラ"; ObjectID = "nZJ-JZ-d70"; */
+/* Class = "UILabel"; text = "Extension"; ObjectID = "nZJ-JZ-d70"; */
 "nZJ-JZ-d70.text" = "拡張コントローラ";
 
 /* Class = "UILabel"; text = "Port 4"; ObjectID = "oBE-Gs-oZH"; */
@@ -170,10 +169,10 @@
 /* Class = "UINavigationItem"; title = "Port 0"; ObjectID = "qeO-Qo-Gt8"; */
 "qeO-Qo-Gt8.title" = "Port 0";
 
-/* Class = "UILabel"; text = "有効"; ObjectID = "qhK-oa-Vec"; */
+/* Class = "UILabel"; text = "Enable"; ObjectID = "qhK-oa-Vec"; */
 "qhK-oa-Vec.text" = "有効";
 
-/* Class = "UILabel"; text = "形式"; ObjectID = "qlf-xO-p0I"; */
+/* Class = "UILabel"; text = "Type"; ObjectID = "qlf-xO-p0I"; */
 "qlf-xO-p0I.text" = "形式";
 
 /* Class = "UILabel"; text = "Wiimote 4"; ObjectID = "s3f-8P-DdD"; */
@@ -191,7 +190,7 @@
 /* Class = "UILabel"; text = "Controller Type 4"; ObjectID = "wqu-s3-jmH"; */
 "wqu-s3-jmH.text" = "Controller Type 4";
 
-/* Class = "UINavigationItem"; title = "拡張コントローラ"; ObjectID = "xW3-sC-el7"; */
+/* Class = "UINavigationItem"; title = "Extension"; ObjectID = "xW3-sC-el7"; */
 "xW3-sC-el7.title" = "拡張コントローラ";
 
 /* Class = "UITableViewController"; title = "Devices"; ObjectID = "xwN-gx-mk9"; */
@@ -200,7 +199,7 @@
 /* Class = "UILabel"; text = "Wiimote 1"; ObjectID = "ygq-gb-7v6"; */
 "ygq-gb-7v6.text" = "Wiimote 1";
 
-/* Class = "UITableViewSection"; headerTitle = "プロファイル"; ObjectID = "w8A-mj-uDH"; */
+/* Class = "UITableViewSection"; headerTitle = "Profile"; ObjectID = "w8A-mj-uDH"; */
 "w8A-mj-uDH.headerTitle" = "プロファイル";
 
 /* Class = "UILabel"; text = "Stick Recentering"; ObjectID = "ygG-fJ-PN6"; */
