--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/pt-BR.lproj/InGameSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/pt-BR.lproj/InGameSettings.strings
@@ -1,14 +1,13 @@
-
 /* Class = "UILabel"; text = "Controller Type"; ObjectID = "CkD-S7-YYh"; */
 "CkD-S7-YYh.text" = "Controller Type";
 
 /* Class = "UITableViewSection"; headerTitle = "Controllers"; ObjectID = "Hcg-Pf-vHF"; */
 "Hcg-Pf-vHF.headerTitle" = "Controllers";
 
-/* Class = "UILabel"; text = "Guardar"; ObjectID = "K1u-Lf-ImR"; */
+/* Class = "UILabel"; text = "Save"; ObjectID = "K1u-Lf-ImR"; */
 "K1u-Lf-ImR.text" = "Guardar";
 
-/* Class = "UILabel"; text = "Carregar"; ObjectID = "Kj5-6t-VLU"; */
+/* Class = "UILabel"; text = "Load"; ObjectID = "Kj5-6t-VLU"; */
 "Kj5-6t-VLU.text" = "Carregar";
 
 /* Class = "UINavigationItem"; title = "Change Controller"; ObjectID = "LOg-ZN-hB0"; */
@@ -17,13 +16,13 @@
 /* Class = "UITableViewSection"; headerTitle = "Save State"; ObjectID = "OsQ-TK-bBV"; */
 "OsQ-TK-bBV.headerTitle" = "Save State";
 
-/* Class = "UINavigationItem"; title = "Guardar"; ObjectID = "dYF-hp-EOu"; */
+/* Class = "UINavigationItem"; title = "Save"; ObjectID = "dYF-hp-EOu"; */
 "dYF-hp-EOu.title" = "Guardar";
 
 /* Class = "UILabel"; text = "Settings"; ObjectID = "eS5-Gd-2Ef"; */
 "eS5-Gd-2Ef.text" = "Settings";
 
-/* Class = "UINavigationItem"; title = "Carregar"; ObjectID = "elK-Yl-abI"; */
+/* Class = "UINavigationItem"; title = "Load"; ObjectID = "elK-Yl-abI"; */
 "elK-Yl-abI.title" = "Carregar";
 
 /* Class = "UINavigationItem"; title = "Settings"; ObjectID = "ggR-Du-beY"; */
@@ -47,14 +46,14 @@
 /* Class = "UILabel"; text = "Game Name"; ObjectID = "Xpb-MD-Ttl"; */
 "Xpb-MD-Ttl.text" = "Game Name";
 
-/* Class = "UINavigationItem"; title = "Mudar Disco"; ObjectID = "jpz-Dz-fkp"; */
+/* Class = "UINavigationItem"; title = "Change Disc"; ObjectID = "jpz-Dz-fkp"; */
 "jpz-Dz-fkp.title" = "Mudar Disco";
 
 /* Class = "UITableViewController"; title = "Change Touchscreen"; ObjectID = "k2b-Zj-1F8"; */
 "k2b-Zj-1F8.title" = "Change Touchscreen";
 
-/* Class = "UITableViewSection"; headerTitle = "Diversos"; ObjectID = "m8l-i1-6aC"; */
+/* Class = "UITableViewSection"; headerTitle = "Misc"; ObjectID = "m8l-i1-6aC"; */
 "m8l-i1-6aC.headerTitle" = "Diversos";
 
-/* Class = "UILabel"; text = "Mudar Disco"; ObjectID = "wCh-P0-Prf"; */
+/* Class = "UILabel"; text = "Change Disc"; ObjectID = "wCh-P0-Prf"; */
 "wCh-P0-Prf.text" = "Mudar Disco";
