--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/sv.lproj/InGameSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/sv.lproj/InGameSettings.strings
@@ -1,35 +1,34 @@
-
 /* Class = "UILabel"; text = "Controller Type"; ObjectID = "CkD-S7-YYh"; */
 "CkD-S7-YYh.text" = "Controller Type";
 
-/* Class = "UITableViewSection"; headerTitle = "Kontroller"; ObjectID = "Hcg-Pf-vHF"; */
+/* Class = "UITableViewSection"; headerTitle = "Controllers"; ObjectID = "Hcg-Pf-vHF"; */
 "Hcg-Pf-vHF.headerTitle" = "Kontroller";
 
-/* Class = "UILabel"; text = "Spara"; ObjectID = "K1u-Lf-ImR"; */
+/* Class = "UILabel"; text = "Save"; ObjectID = "K1u-Lf-ImR"; */
 "K1u-Lf-ImR.text" = "Spara";
 
-/* Class = "UILabel"; text = "Läs in"; ObjectID = "Kj5-6t-VLU"; */
+/* Class = "UILabel"; text = "Load"; ObjectID = "Kj5-6t-VLU"; */
 "Kj5-6t-VLU.text" = "Läs in";
 
 /* Class = "UINavigationItem"; title = "Change Controller"; ObjectID = "LOg-ZN-hB0"; */
 "LOg-ZN-hB0.title" = "Change Controller";
 
-/* Class = "UITableViewSection"; headerTitle = "Spara snabbsparning"; ObjectID = "OsQ-TK-bBV"; */
+/* Class = "UITableViewSection"; headerTitle = "Save State"; ObjectID = "OsQ-TK-bBV"; */
 "OsQ-TK-bBV.headerTitle" = "Spara snabbsparning";
 
-/* Class = "UINavigationItem"; title = "Spara"; ObjectID = "dYF-hp-EOu"; */
+/* Class = "UINavigationItem"; title = "Save"; ObjectID = "dYF-hp-EOu"; */
 "dYF-hp-EOu.title" = "Spara";
 
-/* Class = "UILabel"; text = "Inställningar"; ObjectID = "eS5-Gd-2Ef"; */
+/* Class = "UILabel"; text = "Settings"; ObjectID = "eS5-Gd-2Ef"; */
 "eS5-Gd-2Ef.text" = "Inställningar";
 
-/* Class = "UINavigationItem"; title = "Läs in"; ObjectID = "elK-Yl-abI"; */
+/* Class = "UINavigationItem"; title = "Load"; ObjectID = "elK-Yl-abI"; */
 "elK-Yl-abI.title" = "Läs in";
 
-/* Class = "UINavigationItem"; title = "Inställningar"; ObjectID = "ggR-Du-beY"; */
+/* Class = "UINavigationItem"; title = "Settings"; ObjectID = "ggR-Du-beY"; */
 "ggR-Du-beY.title" = "Inställningar";
 
-/* Class = "UITableViewController"; title = "Inställningar"; ObjectID = "kpj-vC-v4K"; */
+/* Class = "UITableViewController"; title = "Settings"; ObjectID = "kpj-vC-v4K"; */
 "kpj-vC-v4K.title" = "Inställningar";
 
 /* Class = "UILabel"; text = "State Slot 1"; ObjectID = "lY7-Nq-L4G"; */
@@ -47,14 +46,14 @@
 /* Class = "UILabel"; text = "Game Name"; ObjectID = "Xpb-MD-Ttl"; */
 "Xpb-MD-Ttl.text" = "Game Name";
 
-/* Class = "UINavigationItem"; title = "Byt skiva"; ObjectID = "jpz-Dz-fkp"; */
+/* Class = "UINavigationItem"; title = "Change Disc"; ObjectID = "jpz-Dz-fkp"; */
 "jpz-Dz-fkp.title" = "Byt skiva";
 
 /* Class = "UITableViewController"; title = "Change Touchscreen"; ObjectID = "k2b-Zj-1F8"; */
 "k2b-Zj-1F8.title" = "Change Touchscreen";
 
-/* Class = "UITableViewSection"; headerTitle = "Övrigt"; ObjectID = "m8l-i1-6aC"; */
+/* Class = "UITableViewSection"; headerTitle = "Misc"; ObjectID = "m8l-i1-6aC"; */
 "m8l-i1-6aC.headerTitle" = "Övrigt";
 
-/* Class = "UILabel"; text = "Byt skiva"; ObjectID = "wCh-P0-Prf"; */
+/* Class = "UILabel"; text = "Change Disc"; ObjectID = "wCh-P0-Prf"; */
 "wCh-P0-Prf.text" = "Byt skiva";
