--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/es.lproj/Settings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/es.lproj/Settings.strings
@@ -1,26 +1,25 @@
-
 /* Class = "UILabel"; text = "© 2019-2020+ OatmealDome and goob47. \nDolphiniOS is an unofficial and separately maintained port of Dolphin to iOS. The DolphiniOS team has no relation to the official Dolphin project or its mainainers."; ObjectID = "4JH-mf-sk9"; */
 "4JH-mf-sk9.text" = "© 2019-2020+ OatmealDome and goob47. \nDolphiniOS is an unofficial and separately maintained port of Dolphin to iOS. The DolphiniOS team has no relation to the official Dolphin project or its mainainers.";
 
 /* Class = "UILabel"; text = "Patrons 2"; ObjectID = "4zt-R7-qCU"; */
 "4zt-R7-qCU.text" = "Patrons 2";
 
-/* Class = "UILabel"; text = "Gráficos"; ObjectID = "6BT-cH-KPV"; */
+/* Class = "UILabel"; text = "Graphics"; ObjectID = "6BT-cH-KPV"; */
 "6BT-cH-KPV.text" = "Gráficos";
 
-/* Class = "UILabel"; text = "Acerca de Dolphin"; ObjectID = "AZC-s5-S3W"; */
+/* Class = "UILabel"; text = "About Dolphin"; ObjectID = "AZC-s5-S3W"; */
 "AZC-s5-S3W.text" = "Acerca de Dolphin";
 
 /* Class = "UILabel"; text = "Thank you to the following generous Patrons!"; ObjectID = "Apg-2S-OEc"; */
 "Apg-2S-OEc.text" = "Thank you to the following generous Patrons!";
 
-/* Class = "UITableViewController"; title = "Ajustes"; ObjectID = "B4L-TL-IR8"; */
+/* Class = "UITableViewController"; title = "Settings"; ObjectID = "B4L-TL-IR8"; */
 "B4L-TL-IR8.title" = "Ajustes";
 
 /* Class = "UILabel"; text = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way."; ObjectID = "Iw7-Nn-kBa"; */
 "Iw7-Nn-kBa.text" = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way.";
 
-/* Class = "UINavigationItem"; title = "Acerca de Dolphin"; ObjectID = "RI4-PG-OKc"; */
+/* Class = "UINavigationItem"; title = "About Dolphin"; ObjectID = "RI4-PG-OKc"; */
 "RI4-PG-OKc.title" = "Acerca de Dolphin";
 
 /* Class = "UIButton"; normalTitle = "Source Code"; ObjectID = "Sud-8v-xe3"; */
@@ -32,34 +31,34 @@
 /* Class = "UILabel"; text = "DolphiniOS"; ObjectID = "YrK-0b-KPM"; */
 "YrK-0b-KPM.text" = "DolphiniOS";
 
-/* Class = "UINavigationItem"; title = "Ajustes"; ObjectID = "ack-ew-MP2"; */
+/* Class = "UINavigationItem"; title = "Settings"; ObjectID = "ack-ew-MP2"; */
 "ack-ew-MP2.title" = "Ajustes";
 
 /* Class = "UILabel"; text = "Donate"; ObjectID = "cRV-Hq-IOP"; */
 "cRV-Hq-IOP.text" = "Donate";
 
-/* Class = "UILabel"; text = "Ayuda"; ObjectID = "dfe-JF-PdQ"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "dfe-JF-PdQ"; */
 "dfe-JF-PdQ.text" = "Ayuda";
 
-/* Class = "UILabel"; text = "No debes utilizarlo con juegos que no poseas legalmente."; ObjectID = "f6q-Ez-JFr"; */
+/* Class = "UILabel"; text = "This software should not be used to play games you do not legally own."; ObjectID = "f6q-Ez-JFr"; */
 "f6q-Ez-JFr.text" = "No debes utilizarlo con juegos que no poseas legalmente.";
 
-/* Class = "UILabel"; text = "Versión"; ObjectID = "fTF-PL-Io8"; */
+/* Class = "UILabel"; text = "Version"; ObjectID = "fTF-PL-Io8"; */
 "fTF-PL-Io8.text" = "Versión";
 
-/* Class = "UILabel"; text = "Configuración"; ObjectID = "n0Q-3C-VDC"; */
+/* Class = "UILabel"; text = "Config"; ObjectID = "n0Q-3C-VDC"; */
 "n0Q-3C-VDC.text" = "Configuración";
 
 /* Class = "UILabel"; text = "Patrons 1"; ObjectID = "qg5-mQ-I0A"; */
 "qg5-mQ-I0A.text" = "Patrons 1";
 
-/* Class = "UIViewController"; title = "Acerca de Dolphin"; ObjectID = "u6n-zE-oUh"; */
+/* Class = "UIViewController"; title = "About Dolphin"; ObjectID = "u6n-zE-oUh"; */
 "u6n-zE-oUh.title" = "Acerca de Dolphin";
 
-/* Class = "UILabel"; text = "Mandos"; ObjectID = "xpQ-qK-CHk"; */
+/* Class = "UILabel"; text = "Controllers"; ObjectID = "xpQ-qK-CHk"; */
 "xpQ-qK-CHk.text" = "Mandos";
 
-/* Class = "UILabel"; text = "Depurar"; ObjectID = "6JD-gF-g10"; */
+/* Class = "UILabel"; text = "Debug"; ObjectID = "6JD-gF-g10"; */
 "6JD-gF-g10.text" = "Depurar";
 
 /* Class = "UILabel"; text = "Register Cache Disabled"; ObjectID = "9xh-DU-gOm"; */
@@ -83,10 +82,10 @@
 /* Class = "UILabel"; text = "Integer Disabled"; ObjectID = "bxk-99-Snh"; */
 "bxk-99-Snh.text" = "Integer Disabled";
 
-/* Class = "UILabel"; text = "Ayuda"; ObjectID = "gtb-Ne-ddc"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "gtb-Ne-ddc"; */
 "gtb-Ne-ddc.text" = "Ayuda";
 
-/* Class = "UINavigationItem"; title = "Depurar"; ObjectID = "ico-l1-GvZ"; */
+/* Class = "UINavigationItem"; title = "Debug"; ObjectID = "ico-l1-GvZ"; */
 "ico-l1-GvZ.title" = "Depurar";
 
 /* Class = "UILabel"; text = "Load Store Floating Point Disabled"; ObjectID = "li5-FM-I1H"; */
@@ -101,10 +100,10 @@
 /* Class = "UILabel"; text = "Load Store Disabled"; ObjectID = "s98-qA-2g6"; */
 "s98-qA-2g6.text" = "Load Store Disabled";
 
-/* Class = "UITableViewSection"; headerTitle = "Varios"; ObjectID = "ssc-yG-eeX"; */
+/* Class = "UITableViewSection"; headerTitle = "Misc"; ObjectID = "ssc-yG-eeX"; */
 "ssc-yG-eeX.headerTitle" = "Varios";
 
-/* Class = "UILabel"; text = "Salir"; ObjectID = "1co-pK-Y2u"; */
+/* Class = "UILabel"; text = "Quit"; ObjectID = "1co-pK-Y2u"; */
 "1co-pK-Y2u.text" = "Salir";
 
 /* Class = "UILabel"; text = "Set Process As Debugged"; ObjectID = "3ho-Oh-qCP"; */
