--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/it.lproj/Settings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/it.lproj/Settings.strings
@@ -1,26 +1,25 @@
-
 /* Class = "UILabel"; text = "© 2019-2020+ OatmealDome and goob47. \nDolphiniOS is an unofficial and separately maintained port of Dolphin to iOS. The DolphiniOS team has no relation to the official Dolphin project or its mainainers."; ObjectID = "4JH-mf-sk9"; */
 "4JH-mf-sk9.text" = "© 2019-2020+ OatmealDome and goob47. \nDolphiniOS is an unofficial and separately maintained port of Dolphin to iOS. The DolphiniOS team has no relation to the official Dolphin project or its mainainers.";
 
 /* Class = "UILabel"; text = "Patrons 2"; ObjectID = "4zt-R7-qCU"; */
 "4zt-R7-qCU.text" = "Patrons 2";
 
-/* Class = "UILabel"; text = "Video"; ObjectID = "6BT-cH-KPV"; */
+/* Class = "UILabel"; text = "Graphics"; ObjectID = "6BT-cH-KPV"; */
 "6BT-cH-KPV.text" = "Video";
 
-/* Class = "UILabel"; text = "A proposito di Dolphin"; ObjectID = "AZC-s5-S3W"; */
+/* Class = "UILabel"; text = "About Dolphin"; ObjectID = "AZC-s5-S3W"; */
 "AZC-s5-S3W.text" = "A proposito di Dolphin";
 
 /* Class = "UILabel"; text = "Thank you to the following generous Patrons!"; ObjectID = "Apg-2S-OEc"; */
 "Apg-2S-OEc.text" = "Thank you to the following generous Patrons!";
 
-/* Class = "UITableViewController"; title = "Impostazioni"; ObjectID = "B4L-TL-IR8"; */
+/* Class = "UITableViewController"; title = "Settings"; ObjectID = "B4L-TL-IR8"; */
 "B4L-TL-IR8.title" = "Impostazioni";
 
 /* Class = "UILabel"; text = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way."; ObjectID = "Iw7-Nn-kBa"; */
 "Iw7-Nn-kBa.text" = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way.";
 
-/* Class = "UINavigationItem"; title = "A proposito di Dolphin"; ObjectID = "RI4-PG-OKc"; */
+/* Class = "UINavigationItem"; title = "About Dolphin"; ObjectID = "RI4-PG-OKc"; */
 "RI4-PG-OKc.title" = "A proposito di Dolphin";
 
 /* Class = "UIButton"; normalTitle = "Source Code"; ObjectID = "Sud-8v-xe3"; */
@@ -32,31 +31,31 @@
 /* Class = "UILabel"; text = "DolphiniOS"; ObjectID = "YrK-0b-KPM"; */
 "YrK-0b-KPM.text" = "DolphiniOS";
 
-/* Class = "UINavigationItem"; title = "Impostazioni"; ObjectID = "ack-ew-MP2"; */
+/* Class = "UINavigationItem"; title = "Settings"; ObjectID = "ack-ew-MP2"; */
 "ack-ew-MP2.title" = "Impostazioni";
 
 /* Class = "UILabel"; text = "Donate"; ObjectID = "cRV-Hq-IOP"; */
 "cRV-Hq-IOP.text" = "Donate";
 
-/* Class = "UILabel"; text = "Aiuto"; ObjectID = "dfe-JF-PdQ"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "dfe-JF-PdQ"; */
 "dfe-JF-PdQ.text" = "Aiuto";
 
-/* Class = "UILabel"; text = "Questo software non dovrebbe essere utilizzato per la riproduzione di giochi di cui non sei legalmente in possesso."; ObjectID = "f6q-Ez-JFr"; */
+/* Class = "UILabel"; text = "This software should not be used to play games you do not legally own."; ObjectID = "f6q-Ez-JFr"; */
 "f6q-Ez-JFr.text" = "Questo software non dovrebbe essere utilizzato per la riproduzione di giochi di cui non sei legalmente in possesso.";
 
-/* Class = "UILabel"; text = "Versione"; ObjectID = "fTF-PL-Io8"; */
+/* Class = "UILabel"; text = "Version"; ObjectID = "fTF-PL-Io8"; */
 "fTF-PL-Io8.text" = "Versione";
 
-/* Class = "UILabel"; text = "Configurazione"; ObjectID = "n0Q-3C-VDC"; */
+/* Class = "UILabel"; text = "Config"; ObjectID = "n0Q-3C-VDC"; */
 "n0Q-3C-VDC.text" = "Configurazione";
 
 /* Class = "UILabel"; text = "Patrons 1"; ObjectID = "qg5-mQ-I0A"; */
 "qg5-mQ-I0A.text" = "Patrons 1";
 
-/* Class = "UIViewController"; title = "A proposito di Dolphin"; ObjectID = "u6n-zE-oUh"; */
+/* Class = "UIViewController"; title = "About Dolphin"; ObjectID = "u6n-zE-oUh"; */
 "u6n-zE-oUh.title" = "A proposito di Dolphin";
 
-/* Class = "UILabel"; text = "Controller"; ObjectID = "xpQ-qK-CHk"; */
+/* Class = "UILabel"; text = "Controllers"; ObjectID = "xpQ-qK-CHk"; */
 "xpQ-qK-CHk.text" = "Controller";
 
 /* Class = "UILabel"; text = "Debug"; ObjectID = "6JD-gF-g10"; */
@@ -83,7 +82,7 @@
 /* Class = "UILabel"; text = "Integer Disabled"; ObjectID = "bxk-99-Snh"; */
 "bxk-99-Snh.text" = "Integer Disabled";
 
-/* Class = "UILabel"; text = "Aiuto"; ObjectID = "gtb-Ne-ddc"; */
+/* Class = "UILabel"; text = "Help"; ObjectID = "gtb-Ne-ddc"; */
 "gtb-Ne-ddc.text" = "Aiuto";
 
 /* Class = "UINavigationItem"; title = "Debug"; ObjectID = "ico-l1-GvZ"; */
@@ -101,10 +100,10 @@
 /* Class = "UILabel"; text = "Load Store Disabled"; ObjectID = "s98-qA-2g6"; */
 "s98-qA-2g6.text" = "Load Store Disabled";
 
-/* Class = "UITableViewSection"; headerTitle = "Varie"; ObjectID = "ssc-yG-eeX"; */
+/* Class = "UITableViewSection"; headerTitle = "Misc"; ObjectID = "ssc-yG-eeX"; */
 "ssc-yG-eeX.headerTitle" = "Varie";
 
-/* Class = "UILabel"; text = "Esci"; ObjectID = "1co-pK-Y2u"; */
+/* Class = "UILabel"; text = "Quit"; ObjectID = "1co-pK-Y2u"; */
 "1co-pK-Y2u.text" = "Esci";
 
 /* Class = "UILabel"; text = "Set Process As Debugged"; ObjectID = "3ho-Oh-qCP"; */
